# livs-stack

./: .dockerignore  .gitignore  .rustfmt.toml  Makefile  README.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  filters.js
assets/: .env  .env.prod  Cargo.toml  Dockerfile  README.md
assets/dev/less/: _partial.scss  _partial2.scss  main.scss
assets/dev/scss/: _banner.scss  _constants.scss  _data_attr.scss  _details.scss  _display.scss  _error.scss  _filter-tags.scss  _filters.scss  _footer.scss  _header.scss  _lato.scss  _media.scss  _pages.scss  _partial.scss  _partial2.scss  _scales.scss  _scales_minor_third.scss  _summary.scss  _theme1.scss  _theme2.scss  _theme3.scss  _title.scss  _titles.scss  main.scss
assets/sh/: fetch-images.sh  materialColors.js
assets/src/: main.rs
assets/static/css/: main.css  main.css.map
assets/static/html/: index.html
assets/static/js/: main.js
backend/: .dockerignore  .env  .env.prod  Cargo.toml  Dockerfile  README.md
backend/src/: db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  qs.rs  queries.rs  querystrings.rs  utils.rs
backend/src/db/: config.rs
backend/src/handlers/: authors.rs  customers.rs  formats.rs  genres.rs  inventory.rs  languages.rs  measures.rs  publishers.rs  reviews.rs  root.rs  sets.rs  sets_formats.rs  titles.rs
backend/src/models/: db.rs  response.rs  titles.rs
backend/src/queries/: authors.rs  customers.rs  formats.rs  genres.rs  inventory.rs  languages.rs  measures.rs  publishers.rs  reviews.rs  sets.rs  sets_formats.rs  titles.rs
backend/src/querystrings/: core.rs  titles.rs
bookstore/: Procfile  (+8 more)
frontend/: .dockerignore  .env  .env.prod  Cargo.toml  Dockerfile  README.md
frontend/src/: errors.rs  handlers.rs  lib.rs  main.rs  models.rs  querystrings.rs  utils.rs
(+132 files in other folders)
