[package]
name = "assets"
version = "0.1.0"
authors = ["rodolfo.moi <rodolfo.moi@b2wdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.3"
actix-web = "3.3.2"
dotenv = "0.15.0"
env_logger = "0.8.3"
