[package]
name = "backend"
version = "0.1.0"
authors = ["rodolfo.moi <rodmoi.oliveira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
config = "0.11.0"
deadpool-postgres = "0.5.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.5.0"
